--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             justify-content: center;
         }
 
-        #author {
+        #quoteAuthor {
             font-size: 25px;
             font-style: italic;
         }
@@ -70,8 +70,8 @@
         <div id="todo">1 day 1 commit</div>
     </div>
     <div id="quote">
-        <div id="author">명언의 저자</div>
-        <div id="content">명언의 내용</div>
+        <div id="quoteAuthor">명언의 저자</div>
+        <div id="quoteContent">명언의 내용</div>
     </div>
 </body>
 
